docs(readme): added notes for maven config