@@ -1,1 +1,11 @@
 # mambu-portx-cbs-connector
+
+## Troubleshooting
+
+### Additional Maven Config Requirement
+
+You may need to run the following prior to building this project
+
+`export MAVEN_OPTS=--add-opens=java.base/java.util=ALL-UNNAMED`
+
+
